# routes/drivers.js
@@ -1,17 +1,17 @@
-const express = require('express');
+/*const express = require('express');
 const router = express.Router();
 
 const driversController = require('../controllers/drivers');
-const validation = require('../middleware/validate');
+
 
 
 router.get('/', driversController.getAll);
 
 router.get('/:id', driversController.getSingle);
 
-router.post('/',validation.saveDriver, driversController.createDriver);
+router.post('/', driversController.createDriver);
 
-router.put('/:id', validation.saveDriver, driversController.updateDriver);
+router.put('/:id', driversController.updateDriver);
 
 router.delete('/:id', driversController.deleteDriver);
 
@@ -19,4 +19,27 @@ router.delete('/:id', driversController.deleteDriver);
 
 
 
+module.exports = router;*/
+
+
+
+
+
+
+const express = require('express');
+const router = express.Router();
+const driversController = require('../controllers/drivers');
+const { driversValidation } = require('../validations/driversValidation');
+
+
+
+
+router.get('/', driversController.getAll);
+router.get('/:id', driversController.getSingle);
+router.post('/', driversValidation, driversController.createDriver);
+router.put('/:id', driversValidation, driversController.updateDriver);
+router.delete('/:id', driversController.deleteDriver);
+
 module.exports = router;
+
+
