# server.js
@@ -1,19 +1,13 @@
+//const express = require('express');//
+const swaggerUi = require('swagger-ui-express');
+const swaggerfile = require('./swagger.json');
 const express = require('express');
-
-
 const bodyParser = require('body-parser');
-
 const mongodb = require('./data/database');
-
-
 const port = process.env.PORT || 3000;
-
 const app = express();
 
-
-
 app.use (bodyParser.json())
-
 app.use((req, res, next)=>{
                 res.setHeader('Access-Control-Allow-Origin', '*');
                 res.setHeader(
@@ -24,16 +18,9 @@ app.use((req, res, next)=>{
                 next();
 })
 
+app.use('/api-docs', swaggerUi.serve, 
+swaggerUi.setup(swaggerfile));
 app.use('/',require('./routes'));
-
-process.on('uncaughtException', (err, origin) => {
-    console.log(process.stderr.fd, `Caught exception: ${err}\n`
-    `Exception origin: ${origin}`);
-});
-
-
-
-
 
 mongodb.initDb((err) =>  {
                 if (err) {console.log(err);
@@ -42,3 +29,21 @@ else {
 app.listen(port, ()  => {console.log(`Database is listening and node Running on port ${port}`)});
 }
 });
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
