# swagger.json
@@ -1,15 +1,15 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Contacts Api",
-    "description": "Contacts Api",
+    "title": "Vehicles and Drivers API",
+    "description": "API for managing vehicles and drivers",
     "version": "1.0.0"
   },
-  "host": "webservices-project-mv6b.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
+    "http",
     "https"
-    
   ],
   "paths": {
     "/": {
@@ -22,15 +22,31 @@
         }
       }
     },
-    "/vehicles/": {
+    "/api-docs/": {
       "get": {
         "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/vehicles/": {
+      "get": {
+        "tags": [
+          "vehicles"
+        ],
+        "description": "Get all vehicles",
         "produces": [
           "application/json"
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -72,6 +88,9 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -80,7 +99,10 @@
     },
     "/vehicles/{id}": {
       "get": {
-        "description": "",
+        "tags": [
+          "drivers"
+        ],
+        "description": "Get a single driver by ID",
         "produces": [
           "application/json"
         ],
@@ -95,6 +117,12 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -141,6 +169,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -169,28 +200,72 @@
     },
     "/drivers/": {
       "get": {
-        "description": "",
+        "tags": [
+          "drivers"
+        ],
+        "description": "Get all drivers",
         "produces": [
           "application/json"
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "post": {
+        "tags": [
+          "contacts"
+        ],
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "favoriteColor": {
+                  "example": "any"
+                },
+                "birthday": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
-          "default": {
-            "description": ""
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
     "/drivers/{id}": {
       "get": {
-        "description": "",
+        "tags": [
+          "drivers"
+        ],
+        "description": "Get a single driver by ID",
         "produces": [
           "application/json"
         ],
@@ -205,10 +280,19 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "put": {
+        "tags": [
+          "contacts"
+        ],
         "description": "",
         "parameters": [
           {
@@ -251,6 +335,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
